NavBar Fix, Spacing Weird

--- a/css/index.css
+++ b/css/index.css
@@ -6,209 +6,93 @@ body {
     font-family: 'Courier New', sans-serif;
 	font-size: 180%;
 }
-#nav {
-    height: 70px;
-    width: 2000px;
-    position: fixed;
-    top:0;
-    left:0;
-    background: rgba(255,255,255,1);
-    z-index: 999;
-    -webkit-box-shadow:0px 0px 20px rgba(44,44,44,.3);
-	min-width: 1200px;
-}
 
-#nav #logo {
-    height: 60px;
-    width: 60px;
+#logo {
+    top: -5px;
+    height: 34px;
+    width: 34px;
     position: relative;
-    top: 5px;
-    bottom:0;
-	left: -30px;
-    margin: auto 100px;
 }
-#nav #logo img {
+#logo img {
     height: 100%;
     width: 100%;    
 }
-#nav #logo:hover{
+#logo:hover{
 	background-image: "../images/logo2.png";
-    height: 60px;
-    width: 60px;
+    height: 34px;
+    width: 34px;
     position: relative;
-    top: 5px;
-    bottom:0;
-	left: -30px;
-    margin: auto 100px; 
 }
 
-#nav #name {
-    height: 40px;
-    width: 250px;
-    position: absolute;
-    top: 0;
-    bottom:0;
-	left: 50px;
-    margin: auto 100px;
+#name {
+    top: -15px;
+    height: 30px;
+    width: 180px;
+    position: relative;
 }
-#nav #name img {
+#name img {
     height: 100%;
     width: 100%;    
 }
 
-
-#nav #sm1 {
+#navbar #sm1 {
     height: 40px;
     width: 40px;
-    position: absolute;
-    top: 0;
-    bottom:0;
-	right: 8.5%;
-    margin: auto 100px;
+    position: relative;
 }
-#nav #sm1 img {
+#navbar #sm1 img {
     height: 100%;
-    width: 100%;   
+    width: 100%;
 }
-#nav #sm1:hover{
-    border-radius: 100%;
-    max-height: 300px;
-    width: 50%;
-    max-width: 40px;
-    border: 4px solid white;
 
-    -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    -o-transition: all 1s ease;	
-    -ms-transition: all 1s ease;
-    transition: all 1s ease;	
-}	
-
-#nav #sm2 {
+#navbar #sm2 {
     height: 40px;
     width: 40px;
-    position: absolute;
-    top: 0;
-    bottom:0;
-	right: 6%;
-    margin: auto 100px;
+    position: relative;
 }
-#nav #sm2:hover{
-    border-radius: 100%;
-    max-height: 300px;
-    width: 50%;
-    max-width: 40px;
-    border: 4px solid white;
-
-    -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    -o-transition: all 1s ease;	
-    -ms-transition: all 1s ease;
-    transition: all 1s ease;	
-}
-#nav #sm2 img {
+#navbar #sm2 img {
     height: 100%;
     width: 100%;  
 	
-	
-}#nav #sm3 {
+}#navbar #sm3 {
     height: 40px;
     width: 40px;
-    position: absolute;
-    top: 0;
-    bottom:0;
-	right: 3.5%;
-    margin: auto 100px;
+    position: relative;
 }
-#nav #sm3 img {
+#navbar #sm3 img {
     height: 100%;
     width: 100%;
 }    
-#nav #sm3:hover{
-    border-radius: 100%;
-    max-height: 300px;
-    width: 50%;
-    max-width: 40px;
-    border: 4px solid white;
 
-    -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    -o-transition: all 1s ease;	
-    -ms-transition: all 1s ease;
-    transition: all 1s ease;	
-}	
-
-#nav #sm4 {
+#navbar #sm4 {
     height: 40px;
     width: 40px;
-    position: absolute;
-    top: 0;
-    bottom:0;
-	right: 1%;
-    margin: auto 100px;
+    position: relative;
 }
-#nav #sm4 img {
+#navbar #sm4 img {
     height: 100%;
     width: 100%;    
 }
-#nav #sm4:hover{
-    border-radius: 100%;
-    max-height: 300px;
-    width: 50%;
-    max-width: 40px;
-    border: 4px solid white;
 
-    -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    -o-transition: all 1s ease;	
-    -ms-transition: all 1s ease;
-    transition: all 1s ease;	
-}
-
-#nav #self-portrait {
-    height: 60px;
-    width: 90px;
-    position: absolute;
-    top: 25px;
-    bottom:0;
-	right: 54%;
+#self-portrait {
+       top: -30px;
 	color: black;
 }
-#nav #projects {
-    height: 60px;
-    width: 60px;
-    position: absolute;
-    top: 25px;
-    bottom:0;
-	right: 50%;
+#projects {
+       top: -30px;
 	color: black;
 }
-#nav #awards {
-    height: 60px;
-    width: 60px;
-    position: absolute;
-    top: 25px;
-    bottom:0;
-	right: 44%;
+#awards {
 	color: black;
 }
-#nav #organizations {
-    height: 60px;
-    width: 60px;
-    position: absolute;
-    top: 25px;
-    bottom:0;
-	right: 31%;
+#organizations {
 	color: black;
 }
-#nav #resume {
-    height: 60px;
-    width: 60px;
-    position: absolute;
-    top: 25px;
-    bottom:0;
-	right: 23%;
+#resume {
 	color: black;
+}
+#button_home {
+    color: black;
 }
 
 div.description {
@@ -291,8 +175,10 @@ h4 {
 h5 {
     color: black;
     font-family: 'Courier New', sans-serif;
-	font-size:13px;
-	letter-spacing: 2px;
+	font-size:16px;
+	letter-spacing: 1px;
+    font-weight: bold;
+    padding: 6px;
 }
 .image {
     height: 900px;
@@ -411,8 +297,6 @@ h5 {
     padding: 0;
 }
 p.SelfP{
-    margin-left: 300px;
-    margin-right: 300px;
 }
 .card {
     background: #ececec;
